--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=1b40cf5bada69a739d1611b80b2171be
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
